fixed alignment on filters

--- a/app/assets/stylesheets/components/_activity_search.scss
+++ b/app/assets/stylesheets/components/_activity_search.scss
@@ -12,7 +12,7 @@
 }
 
 .search-container {
-  margin: auto 6vw;
+  margin: auto;
   height: 290px;
   padding-top: 10px;
   border: 1px solid $viridian-green;
@@ -27,11 +27,10 @@
 label[for="toggle"] {
   font-size: 15px;
   color: $rose-red;
-  position: absolute;
   bottom: 0;
-  left: calc(50vw - 35px);
   cursor: pointer;
   z-index: 10000;
+  margin-top: 5px;
 }
 
 #toggle {
@@ -48,10 +47,12 @@ label[for="toggle"] {
 
 aside {
   position: fixed;
-  top: 59px;
   top: -200px;
+  left: 0;
+  right: 0;
   z-index: 10000;
   transition: 0.6s all;
+
 }
 
 #toggle:checked + aside {
